--- a/css/main.css
+++ b/css/main.css
@@ -1,26 +1,142 @@
+@font-face {
+    font-family: "redesFont";
+    src: url(../fonts/redes-webfont.eot);
+    src: url(../fonts/redes-webfont.eot?#iefix) format("embedded-opentype"), url(../fonts/redes-webfont.woff2) format("woff2"), url(../fonts/redes-webfont.woff) format("woff"), url(../fonts/redes-webfont.ttf) format("truetype"), url(../fonts/redes-webfont.svg#untitled-font-1) format("svg");
+    font-weight: normal;
+    font-style: normal
+    }
+
+@font-face {
+    font-family: "textB";
+    src: url(../fonts/Optima-Bold-webfont.eot);
+    src: url(../fonts/Optima-Bold-webfont.eot?#iefix) format("embedded-opentype"), url(../fonts/Optima-Bold-webfont.woff2) format("woff2"), url(../fonts/Optima-Bold-webfont.woff) format("woff"), url(../fonts/Optima-Bold-webfont.ttf) format("truetype"), url(../fonts/Optima-Bold-webfont.svg#optimabold) format("svg");
+    font-weight: normal;
+    font-style: normal
+    }
+
+@font-face {
+    font-family: "textR";
+    src: url(../fonts/Optima-Regular-webfont.eot);
+    src: url(../fonts/Optima-Regular-webfont.eot?#iefix) format("embedded-opentype"), url(../fonts/Optima-Regular-webfont.woff2) format("woff2"), url(../fonts/Optima-Regular-webfont.woff) format("woff"), url(../fonts/Optima-Regular-webfont.ttf) format("truetype"), url(../fonts/Optima-Regular-webfont.svg#optimaregular) format("svg");
+    font-weight: normal;
+    font-style: normal
+    }
+
+@font-face {
+    font-family: "titleB";
+    src: url(../fonts/Trajan-Bold-webfont.eot);
+    src: url(../fonts/Trajan-Bold-webfont.eot?#iefix) format("embedded-opentype"), url(../fonts/Trajan-Bold-webfont.woff2) format("woff2"), url(../fonts/Trajan-Bold-webfont.woff) format("woff"), url(../fonts/Trajan-Bold-webfont.ttf) format("truetype"), url(../fonts/Trajan-Bold-webfont.svg#trajanbold) format("svg");
+    font-weight: normal;
+    font-style: normal
+    }
+
+@font-face {
+    font-family: "titleR";
+    src: url(../fonts/Trajan-Regular-webfont.eot);
+    src: url(../fonts/Trajan-Regular-webfont.eot?#iefix) format("embedded-opentype"), url(../fonts/Trajan-Regular-webfont.woff2) format("woff2"), url(../fonts/Trajan-Regular-webfont.woff) format("woff"), url(../fonts/Trajan-Regular-webfont.ttf) format("truetype"), url(../fonts/Trajan-Regular-webfont.svg#trajanregular) format("svg");
+    font-weight: normal;
+    font-style: normal
+    }
+
+body{
+    font-family: textR;
+    font-size: 16px;
+}
+
+
+/*
+ * Index.php
+ */
+
+#intro .row{
+    margin: 20px 0 0;
+} 
+
+h1, h4{
+    font-family: titleR;
+    text-align: center;
+    text-transform: uppercase;
+} 
+#intro img {
+    display: block;
+    margin: auto;
+} 
+.btnClassicArcher:focus {
+    outline: 0
+    }
+
+.btnClassicArcher::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0
+    }
+
+.btnClassicArcher {
+    background-color: #ccc;
+    border: medium none;
+    color: white;
+    margin: auto;
+    display: block;
+    font-family: textR;
+    font-size: 18px;
+    letter-spacing: 2px;
+    min-height: 32px;
+    min-width: 211px;
+    text-transform: uppercase;
+    position: relative;
+    -moz-transition: background-color 0.5s ease 0s;
+    -o-transition: background-color 0.5s ease 0s;
+    -webkit-transition: background-color 0.5s ease 0s;
+    transition: background-color 0.5s ease 0s;
+    vertical-align: middle
+    }
+
+.btnClassicArcher:hover {
+    background-color: #7F7F7F
+    }
+.previewApp{
+    max-width: 400px;
+    width:100%;
+}
+
+/* Index.php */
+
+/*
+ * Alfa.php
+ */
+
+.inputText{
+    width: 100%;
+    margin: 20px 5px 0px 5px;
+}
+#alfaEnviar{
+    margin-top: 30px;
+}
+/* Alfa.php */
+
+
+/*
+ * Generador
+ */
 section {
     height: 100%;
     margin: 20px 0;
     width: 100%;
     display: table;
 }
-.containerBlock {
-    float: left;
-    width: 250px;
-    height: 250px;
-    margin: 5px 10px;
-    text-align: center;
+section.full{
+    height:100vh;
+    margin: 0;
+    padding: 20px 0;
 }
-.containerBlock img {
+.containerImg img {
     width: 100%;
-}
-.containerBlock input{
-	width: 100%;
-	margin: 5px 0;
 }
 .containerImg > p {
     background: none repeat scroll 0 0 #242424;
     margin: 0;
+    text-align: center;
 }
 .containerImg span {
     color: #e3e3e3;
@@ -29,17 +145,27 @@ section {
     line-height: 188px;
     text-transform: uppercase;
 }
+#background .col-md-3 {
+    margin-bottom: 20px;
+}
 /*
- * Intro 
+ * Menu
  */
-#intro h1 {
-    color: #444;
+.nav.navbar-nav a {
+    font-family: textR;
+    font-size: 14px;
+} 
+/* Menu */ 
+/*
+ * home 
+ */
+#home h1 {
     letter-spacing: 1px;
     text-align: center;
-    text-shadow: -1px 0 #e3e3e3;
     text-transform: uppercase;
+    margin-bottom: 40px;
 }
-#intro span {
+#home span {
     color: #444;
     display: block;
     font-size: 50px;
@@ -47,13 +173,13 @@ section {
     margin: auto;
     text-align: center;
 }
-#intro form {
+#home form {
     height: 30px;
     margin: auto;
     text-align: center;
     width: 200px;
 }
-#intro img, .ci-main {
+#home img, .ci-main {
     display: block;
     height: auto;
     margin: 0px 50% 0px 0!important;
@@ -64,33 +190,31 @@ section {
 .ci-main img {
     margin: 0 !important;
 }
-#intro .builderPreview{
+
+#home .builderPreview{
 	position: relative;
 	width: 100%;
 	height: 540px;
+    display: table;
 }
-#intro #imgBgHolder{
+#home #imgBgHolder{
 	z-index: 0;
 	position: absolute;
 }
-#intro #imgPreviewHolder, .ci-main{
+#home #imgPreviewHolder, .ci-main{
 	z-index: 5;
 	position: absolute!important;
 }
-#intro #imgFrameHolder{
+#home #imgFrameHolder{
 	z-index: 10;
 	position: absolute;
 }
-/* Intro */
+/* home */
 /*
  * Generator
  */
 #generator input {
-    border-radius: 10px;
-    letter-spacing: 1px;
-    line-height: 40px;
-    text-transform: uppercase;
-    width: 100%;
+    margin-top: 40px;
 }
 /* Generator */ 
 /*
@@ -117,22 +241,24 @@ section {
  * Footer
  */
 #footer{
-    margin: 20px 0 0 0;
+    margin: 0;
 }
 #footer .container-fluid {
     background: none repeat scroll 0 0 #242424;
 }
 .copyright {
     margin: 0;
+    padding: 20px 20px 5px;
 }
 .copyright > span {
     color: #e3e3e3;
     display: block;
+    font-family: textB;
     font-size: 8px;
-    line-height: 40px;
+    line-height: 8px;
     margin: auto;
-    text-align: center;
-} 
+    text-align: right;
+}
 /* Footer */
 /*
  * Loading
