--- a/css/cropimg.css
+++ b/css/cropimg.css
@@ -1,49 +1,55 @@
 .ci-main {position:relative;max-width:100%;margin:0 auto;}
-.ci-main .ci-image-wrapper {margin:0;width:600px;height:450px!important;position:relative;overflow:visible;box-shadow:0px 0px 10px rgba(0,0,0,.8);}
+.ci-main .ci-image-wrapper {margin:0;width:600px;height:450px!important;position:relative;overflow:hidden;box-shadow:0px 0px 10px rgba(0,0,0,.8);}
 .ci-main .ci-image-wrapper:hover {cursor:move;}
 .ci-main .ci-image-wrapper img {position:absolute;z-index:1;top:0px;left:0px;display:block !important;max-width:none !important;}
-.ci-main .ci-image-wrapper .ci-fixing-position {display:block;width:17px;height:17px;background-color:#000;position:absolute;z-index:2;background-image:url('img/buttons.png');background-repeat:no-repeat;}
-.ci-main .ci-image-wrapper .ci-fixing-position:hover {cursor:pointer;}
 
-.ci-main .ci-image-wrapper .ci-fixing-position.ci-fptl {bottom:39px;left:5px;background-position:0px -21px;}
-.ci-main .ci-image-wrapper .ci-fixing-position.ci-fptc {bottom:39px;left:22px;background-position:-17px -21px;}
-.ci-main .ci-image-wrapper .ci-fixing-position.ci-fptr {bottom:39px;left:39px;background-position:-34px -21px;}
-.ci-main .ci-image-wrapper .ci-fixing-position.ci-fpcl {bottom:22px;left:5px;background-position:0px -38px;}
-.ci-main .ci-image-wrapper .ci-fixing-position.ci-fpcc {bottom:22px;left:22px;background-position:-17px -38px;}
-.ci-main .ci-image-wrapper .ci-fixing-position.ci-fpcr {bottom:22px;left:39px;background-position:-34px -38px;}
-.ci-main .ci-image-wrapper .ci-fixing-position.ci-fpbl {bottom:5px;left:5px;background-position:0px -55px;}
-.ci-main .ci-image-wrapper .ci-fixing-position.ci-fpbc {bottom:5px;left:22px;background-position:-17px -55px;}
-.ci-main .ci-image-wrapper .ci-fixing-position.ci-fpbr {bottom:5px;left:39px;background-position:-34px -55px;}
-.ci-main .ci-tool {
-    bottom: -35px;
+.ci-tool-left.ci-zoomingControlers .ci-fixing-position {display:block;width:17px;height:17px;background-color:#000;position:absolute;z-index:2;background-image:url('img/buttons.png');background-repeat:no-repeat;}
+.ci-tool-left.ci-zoomingControlers .ci-fixing-position:hover {cursor:pointer;}
+
+.ci-tool-left.ci-zoomingControlers .ci-fixing-position.ci-fptl {bottom:39px;left:5px;background-position:0px -21px;}
+.ci-tool-left.ci-zoomingControlers .ci-fixing-position.ci-fptc {bottom:39px;left:22px;background-position:-17px -21px;}
+.ci-tool-left.ci-zoomingControlers .ci-fixing-position.ci-fptr {bottom:39px;left:39px;background-position:-34px -21px;}
+.ci-tool-left.ci-zoomingControlers .ci-fixing-position.ci-fpcl {bottom:22px;left:5px;background-position:0px -38px;}
+.ci-tool-left.ci-zoomingControlers .ci-fixing-position.ci-fpcc {bottom:22px;left:22px;background-position:-17px -38px;}
+.ci-tool-left.ci-zoomingControlers .ci-fixing-position.ci-fpcr {bottom:22px;left:39px;background-position:-34px -38px;}
+.ci-tool-left.ci-zoomingControlers .ci-fixing-position.ci-fpbl {bottom:5px;left:5px;background-position:0px -55px;}
+.ci-tool-left.ci-zoomingControlers .ci-fixing-position.ci-fpbc {bottom:5px;left:22px;background-position:-17px -55px;}
+.ci-tool-left.ci-zoomingControlers .ci-fixing-position.ci-fpbr {bottom:5px;left:39px;background-position:-34px -55px;}
+.ci-main .ci-tool-left {
+    bottom: -80px;
+    display: none;
+    left: 0;
     position: absolute;
-    right: 0;
+    visibility: hidden;
     width: 50%;
     z-index: 100;
 }
-.ci-main .ci-tool .ci-button {
-    background-image: url("img/buttons.png");
-    background-repeat: no-repeat;
+.ci-main .ci-tool {
+    bottom: -65px;
+    position: absolute;
+    right: 0;
+    width: 100%;
+    z-index: 100;
+}
+.ci-button i, .ci-fixing-size i {
+    color: #e3e3e3;
+    font-size: 50px;
+    line-height: 55px;
+    text-align: center;
+}
+.ci-main .ci-tool .ci-button, .ci-main .ci-tool .ci-fixing-size {
+    background: #222 none repeat scroll 0 0;
     display: block;
     float: right;
-    height: 21px;
-    margin: 0 0 5px 5px;
-    width: 21px;
+    height: 50px;
+    margin: 0 0 0 30px;
+    text-align: center;
+    width: 50px;
 }
 .ci-main .ci-tool .ci-button:hover {cursor:pointer;}
-.ci-main .ci-tool .ci-button.ci-tool-zoomin {background-position:0px 0px;}
-.ci-main .ci-tool .ci-button.ci-tool-zoomout {background-position:-21px 0px;}
-.ci-main .ci-tool .ci-fixing-size {
-    background-image: url("img/buttons.png");
-    background-repeat: no-repeat;
-    display: block;
-    float: right;
-    height: 21px;
-    margin: 0 0 5px 5px;
-    width: 21px;
-}.ci-main .ci-tool .ci-fixing-size:hover {cursor:pointer;}
-.ci-main .ci-tool .ci-fixing-size.ci-fsw {background-position:-42px 0px;}
-.ci-main .ci-tool .ci-fixing-size.ci-fsh {background-position:-63px 0px;}
+.ci-main .ci-tool .ci-fixing-size:hover {cursor:pointer;}
+.ci-main .ci-tool .ci-fixing-size.ci-fsw {float:left;}
+.ci-main .ci-tool .ci-fixing-size.ci-fsh {float:left;}
 .ci-image-loader {display:block;position:absolute;left:-9999px;top:-9999px;z-index:0;}
 .ci-tip {position:absolute;z-index:999;left:0px;top:0px;width:auto;color:#fff;font-family:Arial, Verdana, Tahoma;background:#000;line-height:1.3;font-size:12px;text-shadow:none;padding:4px 8px 5px;border-radius:3px;-moz-border-radius:3px;-webkit-border-radius:3px;}
 .ci-tip:after {content:"";display:block;width:0;height:0;border:solid 5px;border-color:black transparent transparent transparent;margin-left:-5px;position:absolute;left:50%;bottom:-10px;}
